--- a/Css/comentarios/jokas.css
+++ b/Css/comentarios/jokas.css
@@ -1,22 +1,63 @@
 
 .container_joker_chat{
     display:flex;
+    margin-top: 20px;
     margin-bottom: 20px;
 }
+.icono--joker{
+    /* position: relative; */
+    display: flex;
+    align-items: center;
+}
+.container-fecha{
+    z-index:1000;
+    position: absolute;
+    width: 172px;
+
+    display: flex;
+    align-items: center;
+    justify-content:center;
+    transform:rotate(312deg) translate(49px, -40px);
+}
+
+.joker_icon{
+    width:80px;
+    height:80px;
+    z-index: 10000;
+}
+.fecha--joker{
+    clip-path: polygon(0% 41%, 37% 90%, 38% 68%, 98% 99%, 94% 22%, 23% 0%, 22% 26%);
+    background-color: #fff;
+    padding-left: 23%;
+    padding-bottom: 5%;
+    padding-right: 5%;
+    font-size: 12px;
+}
+.fecha--joker---border{
+    width: 95%;
+    height: 134%;
+    background-color: black;
+    transform:translate(1px,2px);
+   position: absolute;
+}
 .joker--mensaje{
+    
     position: relative;
     display: flex;
+    flex:1;
     align-items: center;
     justify-content: center;
 }
+.body-mensaje{
+    clip-path:polygon(0% 47%, 6% 58%, 9% 53%, 11% 67%, 20% 78%, 95% 85%, 95% 0%, 12% 13%, 8% 35%, 5% 41%, 4% 50%);
+}
 .joker--mensaje--style{
-    clip-path: polygon(1% 41%, 6% 61%, 9% 55%, 15% 73%, 19% 67%, 99% 98%, 95% 1%, 13% 19%, 12% 41%, 6% 33%, 5% 45%);
     width:96%;
-    /* height:calc(100% - 43px); */
-    padding-top: calc(100% - 85%);
-    padding-right: calc(100% - 90%);
-    padding-left: calc(100% - 82%);
-    padding-bottom: calc(100% - 70%);
+    /* padding-top: calc(( -1vw * 3) + 17vh); */
+    padding-top: calc(( -1vw / 1.8) + 70px);
+    padding-right: 6%;
+    padding-left: 18%;
+    padding-bottom: calc(( -1vw / 5) + 140px);
     /* display:flex;
     height: fit-content; */
     align-items: center;
@@ -29,7 +70,6 @@
     background-color: black;
     width: 100%;
     height: 116%;
-    clip-path: polygon(1% 41%, 6% 61%, 9% 55%, 15% 73%, 19% 67%, 99% 98%, 95% 1%, 13% 19%, 12% 41%, 6% 33%, 5% 45%);
     /* transform: scale(110%); */
     position:absolute;
     align-items:center;
