--- a/Css/comentarios/jokas.css
+++ b/Css/comentarios/jokas.css
@@ -5,7 +5,6 @@
     margin-bottom: 20px;
 }
 .icono--joker{
-    /* position: relative; */
     display: flex;
     align-items: center;
 }
@@ -28,8 +27,9 @@
 .fecha--joker{
     clip-path: polygon(0% 41%, 37% 90%, 38% 68%, 98% 99%, 94% 22%, 23% 0%, 22% 26%);
     background-color: #fff;
+    padding-top: 3%;
     padding-left: 23%;
-    padding-bottom: 5%;
+    padding-bottom: 6%;
     padding-right: 5%;
     font-size: 12px;
 }
@@ -53,13 +53,10 @@
 }
 .joker--mensaje--style{
     width:96%;
-    /* padding-top: calc(( -1vw * 3) + 17vh); */
     padding-top: calc(( -1vw / 1.8) + 70px);
     padding-right: 6%;
     padding-left: 18%;
     padding-bottom: calc(( -1vw / 5) + 140px);
-    /* display:flex;
-    height: fit-content; */
     align-items: center;
     background-color: white;
 
@@ -70,7 +67,6 @@
     background-color: black;
     width: 100%;
     height: 116%;
-    /* transform: scale(110%); */
     position:absolute;
     align-items:center;
     
