--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,29 +1,32 @@
 <!--Nav-->
-<nav class="navbar navbar-expand-lg border navbar-light bg-light position-fixed w-100" style="top:0; z-index: 200;" id="menu">
+<nav class="navbar navbar-expand-lg border navbar-light bg-light position-fixed w-100" style="top:0; z-index: 200;"
+    id="menu">
     <div class="container-fluid">
-        <a class="navbar-brand" href="Index.html">
+        <a class="navbar-brand" [routerLink]="['/']">
             <span class="text-primary fs-5 fw-bold ">Sonrisas <i class="fas fa-tooth"></i></span>
         </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
                     <li class="nav-item ">
-                        <a class="nav-link active " aria-current="page " href="Index.html">Inicio</a>
+                        <a class="nav-link active " aria-current="page " [routerLink]="['/']">Inicio</a>
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-link " href="Html/servicios.html">Servicios</a>
+                        <a class="nav-link " [routerLink]="['/','planes']">Servicios</a>
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-link " href="Html/sedes.html">Sedes</a>
+                        <a class="nav-link " [routerLink]="['/','sedes']">Sedes</a>
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-link " href="Html/quienessomos.html">Nosotros</a>
+                        <a class="nav-link " [routerLink]="['/','nosotros']">Nosotros</a>
+                        <!-- [routerLink]="['/']" -->
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-link " href="Html/comentarios.html">Comentarios</a>
+                        <a class="nav-link " [routerLink]="['/','comentarios']">Comentarios</a>
                     </li>
 
                 </ul>
@@ -31,11 +34,12 @@
 
             <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
                 <i class="far fa-calendar-alt"></i>
-                </button> >
+            </button> >
             <a class="btn btn-primary" href="Html/Tabla.html" role="button"><i class="fas fa-calendar-check"></i></a>
 
             <form class="d-flex" id="navForm">
-                <input id="navFeedBack" class="form-control me-2 " type="email" placeholder="Correo Electronico " aria-label="email" required>
+                <input id="navFeedBack" class="form-control me-2 " type="email" placeholder="Correo Electronico "
+                    aria-label="email" required>
                 <button class=" btn btn-primary btn-primary-outline-success "> ¡Contactanos!
                 </button>
 
@@ -43,49 +47,6 @@
         </div>
     </div>
 </nav>
-<!--Nav--><!--Nav-->
-    <nav class="navbar navbar-expand-lg border navbar-light bg-light position-fixed w-100" style="top:0; z-index: 200;" id="menu">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="Index.html">
-                <span class="text-primary fs-5 fw-bold ">Sonrisas <i class="fas fa-tooth"></i></span>
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
-                        <li class="nav-item ">
-                            <a class="nav-link active " aria-current="page " href="Index.html">Inicio</a>
-                        </li>
-                        <li class="nav-item ">
-                            <a class="nav-link " href="Html/servicios.html">Servicios</a>
-                        </li>
-                        <li class="nav-item ">
-                            <a class="nav-link " href="Html/sedes.html">Sedes</a>
-                        </li>
-                        <li class="nav-item ">
-                            <a class="nav-link " href="Html/quienessomos.html">Nosotros</a>
-                        </li>
-                        <li class="nav-item ">
-                            <a class="nav-link " href="Html/comentarios.html">Comentarios</a>
-                        </li>
+<app-ventana-emergente>
 
-                    </ul>
-                </ul>
-
-                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                    <i class="far fa-calendar-alt"></i>
-                    </button> >
-                <a class="btn btn-primary" href="Html/Tabla.html" role="button"><i class="fas fa-calendar-check"></i></a>
-
-                <form class="d-flex" id="navForm">
-                    <input id="navFeedBack" class="form-control me-2 " type="email" placeholder="Correo Electronico " aria-label="email" required>
-                    <button class=" btn btn-primary btn-primary-outline-success "> ¡Contactanos!
-                    </button>
-
-                </form>
-            </div>
-        </div>
-    </nav>
-    <!--Nav-->
+<!--Nav-->
