--- a/src/app/components/pagina-principal/pagina-principal.component.html
+++ b/src/app/components/pagina-principal/pagina-principal.component.html
@@ -1,44 +1,6 @@
 
 
-<!--Slider-->
-<div id="carouselExampleIndicators" style="margin-top: 58px" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-indicators">
-        <button type="button " data-bs-target="#carouselExampleIndicators " data-bs-slide-to="0 " class="active "
-            aria-current="true " aria-label="Slide 1 "></button>
-        <button type="button " data-bs-target="#carouselExampleIndicators " data-bs-slide-to="1 "
-            aria-label="Slide 2 "></button>
-        <button type="button " data-bs-target="#carouselExampleIndicators " data-bs-slide-to="2 "
-            aria-label="Slide 3 "></button>
-    </div>
-    <div class="carousel-inner ">
-        <div class="carousel-item active ">
-            <a href="Html/reserva.html " target="_blank ">
-                <img src="assets/Img/1.jpg " class="d-block w-100 " title="!Mira nuestras Membresias¡ " alt="slider1 ">
-            </a>
-        </div>
-        <div class="carousel-item ">
-            <a href="Html/reserva.html " target="_blank ">
-                <img src="assets/Img/2.jpg " class="d-block w-100 " title="!Mira nuestras Membresia¡ " alt="slider1 ">
-            </a>
-        </div>
-        <a href="Html/reserva.html " target="_blank ">
-            <div class="carousel-item ">
-                <img src="assets/Img/3.jpg " class="d-block w-100 " title="!Mira nuestras Membresia¡ " alt="slider1 ">
-            </div>
-        </a>
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-        data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-        data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-    </button>
-</div>
-<!--Slider-->
+<app-carrucel-principal></app-carrucel-principal>
 <!--Intro-->
 <section class="py-5 text-center container ">
     <div class=" border position-relative overflow-hidden pb-md-2 m-md-1 text-center bg-light " id="box ">
@@ -58,73 +20,7 @@
     </div>
     <!--Intro-->
 
-    <!--AGENDAAAAAAAAAAAAAAAAAAAAAA-->
-    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Sonrisas <i class="fas fa-tooth"></i></h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <section>
-                        <form id="agenda" class="row g-3">
-                            <div class="col-md-6">
-                                <label for="nombre" class="form-label">Nombre</label>
-                                <input name="nombre" type="text" class="form-control" id="Nombre" placeholder=" Nombre">
-                            </div>
-                            <div class="col-md-6">
-                                <label for="Apellido" class="form-label">Apellido</label>
-                                <input name="apellido" type="text" class="form-control" id="Apellido"
-                                    placeholder="  Apellido">
-                            </div>
-                            <div class="col-12">
-                                <label for="emailS" class="form-label">Correo</label>
-                                <input name="correo" type="email" class="form-control" id="email"
-                                    placeholder=" nombre@ejemplo.com">
-                            </div>
-                            <div class="col-12">
-                                <label for="telefono" class="form-label">Numero de Telefono</label>
-                                <input name="telefono" type="text" class="form-control" id="telefono"
-                                    placeholder=" 0000000000">
-                            </div>
-                            <div class="col-md-6">
-                                <label for="Hora" class="form-label">Hora:</label>
-                                <input name="hora" type="time" class="form-control" id="hora">
-                            </div>
-                            <div class="col-md-6">
-                                <label for="inputState" class="form-label">Sede</label>
-                                <select name="localidad" id="inputState" class="form-select">
-                                    <option>Barranquilla</option>
-                                    <option>Cartagena</option>
-                                </select>
-                            </div>
-                            <div class="form-check">
-                                <input name="resibir" class="form-check-input" type="checkbox" value=""
-                                    id="defaultCheck1">
-                                <label class="form-check-label" for="defaultCheck1">
-                                    Deseo recibir información sobre novedades y ofertas
-                                </label>
-                            </div>
-                            <div class="form-check">
-                                <input name="terminos" class="form-check-input" type="checkbox" value=""
-                                    id="defaultCheck2" required>
-                                <label class="form-check-label" for="defaultCheck2">
-                                    Declaro haber leido y aceptar las condiciones generales del programa y la normativa
-                                    sobre protección de datos
-                                </label>
-                            </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-                                <button id="submit-agenda" type="submit" class="btn btn-primary">Agendar</button>
-                            </div>
-                        </form>
-                    </section>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!--AGENDAAAAAAAAAAAAAAAAAAAAAA-->
+    
 
 </section>
 <!--Slider-->
