--- a/src/app/components/pagina-nosotros/pagina-nosotros.component.html
+++ b/src/app/components/pagina-nosotros/pagina-nosotros.component.html
@@ -1,8 +1,7 @@
+ 
 <section class="py-5 text-center container" style="margin-top: 58px">
     <h1 class="display-4 font-weight-normal text-white bg-primary rounded pb-md-2">NOSOTROS</h1>
-</section>
-
-<div class="container ">
+ <div class="container ">
     <div class="row p-2 mt-3">
         <div class="col-lg-6 mb-2 border-light">
             <div class="ratio ratio-16x9 ">
@@ -20,24 +19,49 @@
         </div>
     </div>
 </div>
+</section>
 
-<section class="py-5 text-center container">
-    <div class="row row-cols-1 row-cols-md-3 g-4">
-        <div class="col">
-            <div class="card h-100">
-                <img src="assets/Img/quienessomos.jpeg " class="card-img-top" alt="">
+<section class="py-5 text-center container ">
+
+    <div class="container ">
+        <h1 class="display-4 font-weight-normal text-primary "> ¿QUIENES SOMOS?</h1>
+        <p class=" text-justify text-primary ">Somos una empresa que ofrece servicios de odontología general y
+            especializada ubicada en las ciudades de Barranquilla y Cartagena. Prestando nuestros
+            servicios a las familias de la Región Caribe. Contamos con instalaciones habilitadas
+            ante secretaria de salud, y brindamos seguridad y confianza a nuestros pacientes.</p>
+    </div>
+
+ 
+ 
+<section class="py-5 text-center container" style="margin-top: 58px">
+<div class="container ">
+    <div class="container">
+        <div class="row">
+          <div class="col">
+            <div class="card h-100 border-light mb-3">
+                <img src="assets/Img/valores.jpeg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title  ">¿QUIENES SOMOS?</h5>
-                    <p class="card-text text-body  ">Somos una empresa que ofrece servicios de odontología general y
-                        especializada ubicada en las ciudades de Barranquilla y Cartagena. Prestando nuestros
-                        servicios a las familias de la Región Caribe. Contamos con instalaciones habilitadas
-                        ante secretaria de salud, y brindamos seguridad y confianza a nuestros pacientes. </p>
+                    <h5 class="card-title">VALORES</h5>
+                    <p class="card-text text-body">Sonrisas, fomenta a todo su personal, staff de odontólogos,
+                        personal administrativo, asistentas dentales y técnicos en laboratorio dental, nuestros
+                        principales valores, honestidad, laboriosidad, lealtad y respeto.</p>
                 </div>
-                <div class="card-footer">
+                <div class="card h-100 border-light mb-3 ">
+                    <img src="assets/Img/Respnsabilidad.jpeg " class="card-img-top " alt="... ">
+                    <div class="card-body ">
+                        <h5 class="card-title ">RESPONSABILIDAD SOCIAL PRISMA DENTAL</h5>
+                        <p class="card-text text-body ">Sonrisas, esta comprometido con la bioecologia al no utilizar
+                            elementos, que contaminen nuestro frágil medio ambiente, así como también, con nuestra
+                            participación en campañas, programas sociales tanto para niños mujeres y especialmente
+                            al adulto mayor.</p>
+                    </div>
+                    <div class="card-footer ">
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="col">
+            
+          </div>
+          <div class="col">
             <div class="card h-100 border-light mb-3">
                 <img src="assets/Img/Mision.jpg" class="card-img-top" alt="">
                 <div class="card-body">
@@ -58,8 +82,8 @@
                 <div class="card-footer">
                 </div>
             </div>
-        </div>
-        <div class="col">
+          </div>
+          <div class="col">
             <div class="card h-100 border-light mb-3">
                 <img src="assets/Img/Vision.jpg " class="card-img-top" alt="">
                 <div class="card-body">
@@ -75,33 +99,37 @@
                 <div class="card-footer">
                 </div>
             </div>
+          </div>
         </div>
-        <div class="col">
-            <div class="card h-100 border-light mb-3">
-                <img src="assets/Img/valores.jpeg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">VALORES</h5>
-                    <p class="card-text text-body">Sonrisas, fomenta a todo su personal, staff de odontólogos,
-                        personal administrativo, asistentas dentales y técnicos en laboratorio dental, nuestros
-                        principales valores, honestidad, laboriosidad, lealtad y respeto.</p>
-                </div>
-                <div class="card-footer">
-                </div>
-            </div>
-        </div>
-        <div class="col ">
-            <div class="card h-100 border-light mb-3 ">
-                <img src="assets/Img/Respnsabilidad.jpeg " class="card-img-top " alt="... ">
-                <div class="card-body ">
-                    <h5 class="card-title ">RESPONSABILIDAD SOCIAL PRISMA DENTAL</h5>
-                    <p class="card-text text-body ">Sonrisas, esta comprometido con la bioecologia al no utilizar
-                        elementos, que contaminen nuestro frágil medio ambiente, así como también, con nuestra
-                        participación en campañas, programas sociales tanto para niños mujeres y especialmente
-                        al adulto mayor.</p>
-                </div>
-                <div class="card-footer ">
-                </div>
-            </div>
-        </div>
-    </div>
+      </div>
+</div>
 </section>
+</section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
