--- a/src/app/components/pagina-principal/pagina-principal.component.html
+++ b/src/app/components/pagina-principal/pagina-principal.component.html
@@ -3,10 +3,9 @@
 <app-carrucel-principal></app-carrucel-principal>
 <!--Intro-->
 <section class="py-5 text-center container ">
-    <div class=" border position-relative overflow-hidden pb-md-2 m-md-1 text-center bg-light " id="box ">
+ 
 
-
-        <div class=" texto1 col-md-5 p-lg-5 mx-auto my-5 ">
+        <div class="container ">
             <h1 class="display-4 font-weight-normal text-primary "> Bienvenido a Sonrisas</h1>
             <p class=" text-justify text-primary "> En Odontología Sonrisas, contamos con un prestigioso equipo de
                 especialistas en todas las áreas de la odontología, altamente calificado, idóneo y competitivo; que
@@ -17,18 +16,19 @@
                 para los pacientes, con un talento humano idóneo y competitivo.</p>
         </div>
 
-    </div>
-    <!--Intro-->
+     <!--Intro-->
 
     
 
 </section>
 <!--Slider-->
+
 <!--SERVICIOS-->
+
 <section class="py-5 text-center container ">
     <h1>Conoce lo que nos hace diferentes:</h1>
 </section>
-
+ 
 <section class="w-100 ">
     <div class="row w-75 mx-auto ">
         <div class="col-lg-6 col-md-12 col-sm-12 d-flex justify-content-start my-5 icono-wrap ">
@@ -128,6 +128,8 @@
 <!--Noticias-->
 
 <!--FORMULARIO-->
+
+
 <div class="container p-3 border-top border-primary bg-primary mb-3 " style="max-width: 500px ">
     <div class="text-center mb-4" id="titulo-formulario ">
         <div class="d-flex justify-content-center">
