--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,5 @@
 <!--Nav-->
+
 <nav class="navbar navbar-expand-lg border navbar-light bg-light position-fixed w-100" style="top:0; z-index: 200;"
     id="menu">
     <div class="container-fluid">
@@ -34,7 +35,7 @@
 
             <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
                 <i class="far fa-calendar-alt"></i>
-            </button> >
+            </button> <i class="fas fa-arrow-circle-right"></i>
             <a class="btn btn-primary" href="Html/Tabla.html" role="button"><i class="fas fa-calendar-check"></i></a>
 
             <form class="d-flex" id="navForm">
