--- a/src/app/components/pagina-comentarios/pagina-comentarios.component.html
+++ b/src/app/components/pagina-comentarios/pagina-comentarios.component.html
@@ -1,7 +1,7 @@
  <!--Seccion de Comentarios-->
- <section class="py-5 text-center container" style="margin-top: 58px">
-
-    <h1 class="display-4 font-weight-normal text-white bg-primary rounded pb-md-2">Comentarios</h1>
+ 
+ <div class="container">
+  <h1 class="display-4 font-weight-normal text-white bg-primary rounded pb-md-2">Comentarios</h1>
     <div class=" border position-relative overflow-hidden pb-md-2 m-md-1 text-center bg-light">
         <div class=" texto1 col-md-5 p-lg-5 mx-auto my-5">
             <h5 class="text-primary">¡Comparte tu opinión con nosotros! </h5>
@@ -14,7 +14,7 @@
 
         </div>
     </div>
-</section>
+</div>
 
 <!--Boton-->
 <section class="py-5 text-center container">
