--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -36,7 +36,7 @@
             <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
                 <i class="far fa-calendar-alt"></i>
             </button> <i class="fas fa-arrow-circle-right"></i>
-            <a class="btn btn-primary" href="Html/Tabla.html" role="button"><i class="fas fa-calendar-check"></i></a>
+            <a class="btn btn-primary" [routerLink]="['/','reservas']" role="button"><i class="fas fa-calendar-check"></i></a>
 
             <form class="d-flex" id="navForm">
                 <input id="navFeedBack" class="form-control me-2 " type="email" placeholder="Correo Electronico "
