--- a/src/app/components/pagina-nosotros/pagina-nosotros.component.html
+++ b/src/app/components/pagina-nosotros/pagina-nosotros.component.html
@@ -1,5 +1,5 @@
  
-<section class="py-5 text-center container" style="margin-top: 58px">
+<section class="py-5 text-center container">
     <h1 class="display-4 font-weight-normal text-white bg-primary rounded pb-md-2">NOSOTROS</h1>
  <div class="container ">
     <div class="row p-2 mt-3">
