--- a/src/app/components/Comentarios/comentario-normal/comentario-normal.component.html
+++ b/src/app/components/Comentarios/comentario-normal/comentario-normal.component.html
@@ -1,14 +1,14 @@
-<div class="col">
-    <div class="card ">
-        <div class="card">
-            <img class="img " src=" " title="">
+<div class="card mb-4 shadow p-3 mb-5 bg-body rounded">
+    <div class="d-flex justify-content-between">
+        <div class="d-flex flex-row align-items-center">
+            <img src="{{ image }}" alt="" width="25" height="25" />
+            <p class="small ms-2">{{ name }}</p>
         </div>
-        <div class="card-body">
-            <h4 class="card-title"><strong>Sherry y Mike Miller:</strong></h4>
-            <h6 class="categor text-primary">REHABILITACIÓN ORAL</h6>
-            <p class="card">Mi esposo y yo creemos que tenemos un mejor servicio aquí. Los doctores han
-                sido absolutamente maravillosos. Estamos totalmente satisfechos con las facilidades y el
-                servicio</p>
+        <div class="d-flex flex-row align-items-center">
+            <p class="small text-muted">{{ fecha }}</p>
         </div>
     </div>
+    <p class="mb-0">
+        {{ coment }}
+    </p>
 </div>
