--- a/src/app/components/pagina-comentarios/pagina-comentarios.component.html
+++ b/src/app/components/pagina-comentarios/pagina-comentarios.component.html
@@ -1,7 +1,7 @@
  <!--Seccion de Comentarios-->
  
- <div class="container">
-  <h1 class="display-4 font-weight-normal text-white bg-primary rounded pb-md-2">Comentarios</h1>
+<section class="container">
+  <h1 class="text-center display-4 font-weight-normal text-white bg-primary rounded pb-md-2">Comentarios</h1>
     <div class=" border position-relative overflow-hidden pb-md-2 m-md-1 text-center bg-light">
         <div class=" texto1 col-md-5 p-lg-5 mx-auto my-5">
             <h5 class="text-primary">¡Comparte tu opinión con nosotros! </h5>
@@ -14,7 +14,7 @@
 
         </div>
     </div>
-</div>
+</section>
 
 <!--Boton-->
 <section class="py-5 text-center container">
@@ -40,93 +40,34 @@
 </form>
 <!--form-->
 <div id="seccion de comentarios" class="container-lg p-3 " style="background:rgb(13, 110, 253) ">
-    <div class="col card mb-4 shadow p-3 mb-5 bg-body rounded">
-        <div class="d-flex justify-content-between">
-            <div class="d-flex flex-row align-items-center">
-                <img src="assets/Img/comentario1.jpg" alt="" width="25" height="25" />
-                <p class="small ms-2">Annette</p>
-            </div>
-            <div class="d-flex flex-row align-items-center">
-                <p class="small text-muted">Sat Sep 18 2009</p>
-            </div>
-        </div>
-        <p class="mb-0">Mi esposo se sometió a una restauración bucal completa, el doctor ue muy minucioso y
-            tranquilizador, explicando cada paso a medida que avanzaban en el tratamiento.</p>
-    </div>
+    <app-comentario-normal coment="Mi esposo se sometió a una restauración bucal completa, el doctor ue muy minucioso y
+    tranquilizador, explicando cada paso a medida que avanzaban en el tratamiento."
+     fecha="Sat Sep 18 2009"
+     image="assets/Img/comentario1.jpg"
+     name="sans" ></app-comentario-normal>
 
 
+    <app-comentario-normal coment="Acabo de terminar con mis problemas de mandíbula superior con el Dr Fue extremadamente
+    profesional y explicó exactamente lo que estaba a punto de hacer antes de cada procedimiento."
+     fecha="Sat Sep 18 2009"
+     image="assets/Img/comentario4.jpg"
+     name="asriel" ></app-comentario-normal>
+    
 
-    <div class="card mb-4 shadow p-3 mb-5 bg-body rounded">
-        <div class="d-flex justify-content-between">
-            <div class="d-flex flex-row align-items-center">
-                <img src="assets/Img/comentario4.jpg" alt="" width="25" height="25" />
-                <p class="small ms-2">Catherine</p>
-            </div>
-            <div class="d-flex flex-row align-items-center">
-                <p class="small text-muted">Sat Sep 18 2009</p>
-            </div>
-        </div>
-        <p class="mb-0">Acabo de terminar con mis problemas de mandíbula superior con el Dr Fue extremadamente
-            profesional y explicó exactamente lo que estaba a punto de hacer antes de cada procedimiento.</p>
-    </div>
+    <app-comentario-normal coment="El servicio brindado para la limpieza bucal y revisión fue muy profesional y amable. Tienen
+    protocolos ante el COVID-19 bastante robustos."
+     fecha="Tue Sep 06 2013"
+     image="assets/Img/comentario2.jpg"
+     name="kirts" ></app-comentario-normal>
 
-
-
-
-    <div class="card mb-4 shadow p-3 mb-5 bg-body rounded">
-        <div class="d-flex justify-content-between">
-            <div class="d-flex flex-row align-items-center">
-                <img src="assets/Img/comentario2.jpg" alt="" width="25" height="25" />
-                <p class="small ms-2">William</p>
-            </div>
-            <div class="d-flex flex-row align-items-center">
-                <p class="small text-muted">Tue Sep 06 2013</p>
-            </div>
-        </div>
-        <p class="mb-0">El servicio brindado para la limpieza bucal y revisión fue muy profesional y amable. Tienen
-            protocolos ante el COVID-19 bastante robustos.
-
-        </p>
-    </div>
-
-    <div class="card mb-4 shadow p-3 mb-5 bg-body rounded">
-        <div class="d-flex justify-content-between">
-            <div class="d-flex flex-row align-items-center">
-                <img src="assets/Img/comentario3.gif" alt="" width="25" height="25" />
-                <p class="small ms-2">Terrie</p>
-            </div>
-            <div class="d-flex flex-row align-items-center">
-                <p class="small text-muted">Mon Oct 7 2021</p>
-            </div>
-        </div>
-        <p class="mb-0">Terrie, Kate y yo queremos agradecer a Sonrisas por la fantástica atención que hemos
-            recibido. </p>
-    </div>
-
-    <div class="container_joker_chat">
-        <div class="icono--joker">
-            <div class="container-fecha">
-                <div class="fecha--joker---border fecha--joker"></div>
-
-                <div class="fecha--joker">
-                    Mon Oct 7 2021
-                </div>
-
-            </div>
-            <img src="assets/Img/el_JOKAS.png" alt="" class="joker_icon" />
-        </div>
-
-        <div class="joker--mensaje">
-            <div class="joker--mensaje-border body-mensaje">
-
-            </div>
-            <div class="joker--mensaje--style body-mensaje">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi soluta suscipit commodi incidunt.
-                Dolor repellat quibusdam eius praesentium quasi, earum voluptatum, voluptas similique pariatur
-                mollitia exercitationem repudiandae nobis libero deserunt.
-            </div>
-        </div>
-    </div>
+    <app-comentario-normal coment="Terrie, Kate y yo queremos agradecer a Sonrisas por la fantástica atención que hemos
+    recibido." 
+     fecha="Mon Oct 7 2021"
+     image="assets/Img/comentario3.gif"
+     name="ralsei" ></app-comentario-normal>
+    
+    <app-joker-coment fecha="tu gefa" coment="hola, vengo a funar al poyo"></app-joker-coment>
+    
 
 </div>
 <!--Seccion de Comentarios-->
@@ -192,5 +133,6 @@
                 </div>
             </div>
         </div>
+        
     </section>
 </div>
