--- a/src/app/shared/componets/header/header.component.html
+++ b/src/app/shared/componets/header/header.component.html
@@ -8,7 +8,7 @@
                 <i class="fa fa-bars"></i>
                 <span class="sr-only">Toggle navigation</span>
                 </button>
-                <a [routerLink]="['/']" class="navbar-brand brand"> SORNISAS <i class="fas fa-tooth"></i>  </a>
+                <a [routerLink]="['/']" class="navbar-brand brand"> SONRISAS <i class="fas fa-tooth"></i>  </a>
             </div>
             <div id="navbar-collapse-02" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
