--- a/src/app/modules/inicio/pages/inicio-pages/inicio-pages.component.html
+++ b/src/app/modules/inicio/pages/inicio-pages/inicio-pages.component.html
@@ -52,73 +52,28 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-4">
-				<div class="productbox">
-					<div class="fadeshop">
-						<div class="captionshop text-center" style="display: none;">
- 							<p>
-								Enrique Molina - Paciente Marlon Becerra El uso de retenedores dentales es la última etapa de la ortodoncia. Su aplicación garantiza resultados duraderos, ya que sirven para acostumbrar a tus…							</p>
-							 
-						</div>
-						<span class="maxproduct"><img src="assets/Img/n1.jpeg" alt=""></span>
-					</div>
-					<div class="product-details">
-						<a href="#">
-						<h1>EL SIGUIENTE PASO DE LA ORTODONCIA: RETENEDORES DENTALES</h1>
-						</a>
-						<span class="price">
-						<span class="edd_price">Last updated 2 mins ago
-						</span>
-						</span>
-					</div>
-				</div>
-			</div>
- 			<div class="col-md-4">
-				<div class="productbox">
-					<div class="fadeshop">
-						<div class="captionshop text-center" style="display: none;">
- 							<p>
-								Los adultos luchan por mantener sus dientes naturales por más tiempo. Por esta razón, los cuidados dentales se hacen cada vez más cruciales a medida que pasan los años. Si…
+			<app-card-normal 
+				resumen="Enrique Molina - Paciente Marlon Becerra El uso de retenedores dentales es la última etapa de la ortodoncia. Su aplicación garantiza resultados duraderos, ya que sirven para acostumbrar a tus…"
+				titulo="EL SIGUIENTE PASO DE LA ORTODONCIA: RETENEDORES DENTALES"
+				tiempo="Last updated 2 mins ago"
+				img="assets/Img/n1.jpeg">
+			</app-card-normal>
+			
+			<app-card-normal 
+				resumen="Los adultos luchan por mantener sus dientes naturales por más tiempo. Por esta razón, los cuidados dentales se hacen cada vez más cruciales a medida que pasan los años. Si…"
+				titulo="CUIDADOS DENTALES DESPUÉS DE LOS 50 AÑOS"
+				tiempo="Last updated 30 mins ago"
+				img="assets/Img/n2.jpeg">
+			</app-card-normal>
 
-							</p>
-							 
-						</div>
-						<span class="maxproduct"><img src="assets/Img/n2.jpeg" alt=""></span>
-					</div>
-					<div class="product-details">
-						<a href="#">
-						<h1>CUIDADOS DENTALES DESPUÉS DE LOS 50 AÑOS</h1>
-						</a>
-						<span class="price">
-						<span class="edd_price">Last updated 30 mins ago
-						</span>
-						</span>
-					</div>
-				</div>
-			</div>
- 			<div class="col-md-4">
-				<div class="productbox">
-					<div class="fadeshop">
-						<div class="captionshop text-center" style="display: none;">
- 							<p>
-								Gladys Méndez - Paciente Marlon Becerra Una causa común de incomodidad con la sonrisa es tener dientes con manchas blancas. Estamos acostumbrados a tonalidades uniformes de blanco, crema o gris,…
-
-							</p>
-						 
-						</div>
-						<span class="maxproduct"><img src="assets/Img/n3.jpeg" alt=""></span>
-					</div>
-					<div class="product-details">
-						<a href="#">
-						<h1>MEJORA TU SONRISA Y DILE ADIÓS A LOS DIENTES CON MANCHAS BLANCAS</h1>
-						</a>
-						<span class="price">
-						<span class="edd_price">Last updated 13 mins ago
-						</span>
-						</span>
-					</div>
-				</div>
-			</div>
+			<app-card-normal 
+				resumen="Gladys Méndez - Paciente Marlon Becerra Una causa común de incomodidad con la sonrisa es tener dientes con manchas blancas. Estamos acostumbrados a tonalidades uniformes de blanco, crema o gris…"
+				titulo="MEJORA TU SONRISA Y DILE ADIÓS A LOS DIENTES CON MANCHAS BLANCAS"
+				tiempo="Last updated 13 mins ago"
+				img="assets/Img/n3.jpeg">
+			</app-card-normal>
+ 			
+ 			
 		</div>
 	</div>
 </section>
