--- a/src/app/modules/comentarios/pages/comentario-page/comentario-page.component.html
+++ b/src/app/modules/comentarios/pages/comentario-page/comentario-page.component.html
@@ -37,4 +37,9 @@
             </div>
         </div>
     </div>
+    <!-- <app-comentario-normal
+    coment="me gustaq el peperoni"
+    fecha ="martes 3"
+    name ="ralsei"
+    image ="assets/Img/comentario3.gif"></app-comentario-normal> -->
 </section>
