--- a/src/app/modules/inicio/pages/inicio-pages/inicio-pages.component.html
+++ b/src/app/modules/inicio/pages/inicio-pages/inicio-pages.component.html
@@ -82,7 +82,7 @@
 <!-- BOTON =============================-->
 <div class="item content">
 	<div class="container text-center">
-		<a href="servicios.html" class="homebrowseitems">SERVICIOS
+		<a [routerLink]="['/','servicios']" class="homebrowseitems">SERVICIOS
 		<div class="homebrowseitemsicon">
 			<i class="fa fa-star fa-spin"></i>
 		</div>
