--- a/src/app/modules/sedes/pages/sedes-pages/sedes-pages.component.html
+++ b/src/app/modules/sedes/pages/sedes-pages/sedes-pages.component.html
@@ -44,7 +44,7 @@
 
             </div>
             <div class="col-md-4">
-                <a href="agendatucita.html" class="btn btn-buynow">¡AGENDA TU CITA!</a>
+                <a [routerLink]="['/','agenda']" class="btn btn-buynow">¡AGENDA TU CITA!</a>
                 <div class="properties-box">
                     <img class="card-img-top" src="assets/Img/sedecartagena.jpg" alt="Card image cap">
 
