--- a/src/app/modules/sonrisas/pages/error404-pages/error404-pages.component.html
+++ b/src/app/modules/sonrisas/pages/error404-pages/error404-pages.component.html
@@ -1,1 +1,6 @@
-<p>error404-pages works!</p>
+
+<section>
+    <h1 class=" d-inline text-center p-2 bg-primary"> donde te metiste compae</h1>
+    <h2 class="d-inline text-center p-2 bg-primary"> te voy a tener que meter un error 404 </h2>
+
+</section>
