Pelea epica por creacion de fornulario
Carlos es manco

--- a/src/styles.css
+++ b/src/styles.css
@@ -33,7 +33,13 @@ a:hover {
 	padding-bottom:26px;
 	font-size:30px;
 }
+
+#text2{
+ color: #eee;
  
+}
+
+
 header .navbar-white a {
 	color:#3D566E;
 	font-weight:700;
