--- a/src/app/modules/inicio/pages/formulario/formulario.component.html
+++ b/src/app/modules/inicio/pages/formulario/formulario.component.html
@@ -1,19 +1,24 @@
-
-<div class="container">
-    <form class="col-md-8 col-md-offset-2 p-2" style="background-color: #3498DB">
+<section class="p3"> 
+<div class="container ">
+  <h1 class=" text-center ">CONTACTANOS</h1>
+    <form class="col-md-8 col-md-offset-2 p-2 " style="background-color: #3498DB">
         <div class="form-group text-light">
-          <label for="exampleInputEmail1 text-light">Email address</label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-          <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+          <label for="exampleInputEmail1 text-light" id="text2">Nombre  </label>
+          <input type="text" class="form-control"    placeholder="Nombre  ">
+         </div>
+        <div class="form-group text-white">
+          <label class="text-white" id="text2" >Apellido</label>
+          <input type="text" class="form-control"   placeholder="Apellido">
+        </div>
+        <div class="form-group  text-light"id="text2">
+          <label class="text-light" id="text2" >Celular</label>
+          <input type="text" class="form-control"   placeholder="Celular">
         </div>
         <div class="form-group  text-light">
-          <label class="text-light" for="exampleInputPassword1">Password</label>
-          <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+          <label class="text-light"id="text2"  >Hora Que Lo Podemos LLamar</label>
+          <input type="time" class="form-control" >
         </div>
-        <div class="form-check text-light">
-          <input type="checkbox" class="form-check-input" id="exampleCheck1">
-          <label class="form-check-label" for="exampleCheck1">Check me out</label>
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" class="btn btn-primary col-sm">Contactenos</button>
     </form>
 </div>
+</section>
