--- a/src/app/modules/sedes/pages/sedes-pages/sedes-pages.component.html
+++ b/src/app/modules/sedes/pages/sedes-pages/sedes-pages.component.html
@@ -14,13 +14,13 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-8">
+            <div class="col-md-6">
                 <div class="productbox">
                     <div class="card p-3 card border-light mb-3" style="max-width: 120rem; ">
                         <div class="ratio ratio-16x9">
                             <iframe
                                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3916.2396521359087!2d-74.81723728466498!3d11.02063765765071!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8ef42db82f8478dd%3A0x330f15b1a678439!2sCl.%2091%20%2371-40%2C%20Barranquilla%2C%20Atl%C3%A1ntico!5e0!3m2!1ses-419!2sco!4v1632341490638!5m2!1ses-419!2sco"
-                                width="700" height="430" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                                style="border:0; width: 100%;" allowfullscreen="" loading="lazy"></iframe>
                         </div>
                     </div>
                     <div class="clearfix">
@@ -32,19 +32,24 @@
                         </p>
                     </div>
                 </div>
+            </div>
+            <div class="col-md-6">
                 <div class="productbox">
 
                     <div class="ratio ratio-16x9 ">
-                        <iframe width="700 " height="390" src="https://www.youtube.com/embed/C_S8pmC2KMI "
+                        <iframe style="width: 100%;" src="https://www.youtube.com/embed/C_S8pmC2KMI "
                             title="YouTube video player " frameborder="0 "
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture "
                             allowfullscreen></iframe>
                     </div>
                 </div>
-
             </div>
-            <div class="col-md-4">
-                <a [routerLink]="['/','agenda']" class="btn btn-buynow">¡AGENDA TU CITA!</a>
+
+        </div>
+        <div class="row">
+            <a [routerLink]="['/','agenda']" class="btn btn-buynow">¡AGENDA TU CITA!</a>
+            <div class="col-md-6">
+                
                 <div class="properties-box">
                     <img class="card-img-top" src="assets/Img/sedecartagena.jpg" alt="Card image cap">
 
@@ -58,8 +63,9 @@
                         </p>
                     </div>
                 </div>
+                
             </div>
-            <div class="col-md-4">
+            <div class="col-md-6">
                 <div class="properties-box">
                     <img class="card-img-top" src="assets/Img/Sedebarranquilla.jpeg" alt="Card image cap">
                     <div class="card-body">
