--- a/src/app/modules/agenda/pages/agenda-pages/agenda-pages.component.html
+++ b/src/app/modules/agenda/pages/agenda-pages/agenda-pages.component.html
@@ -79,6 +79,12 @@
                         
                          <a [routerLink]="['/','agenda','client']" style="margin-left: 13px;" class="edd-submit button"> ver los clientes</a>
                     </fieldset>
+                    <div style="display:none;" id="ah recuerde llenar el formulario"
+                     class="text-center"> 
+                     <h2>
+                        recuerde llenar el formulario
+                     </h2>
+                    </div>
                 </form>
             </div>
         </div>
