--- a/src/app/modules/inicio/pages/formulario/formulario.component.html
+++ b/src/app/modules/inicio/pages/formulario/formulario.component.html
@@ -5,8 +5,8 @@
 <div class="container">
     <h1 class="text-center"><i class="far fa-id-badge fa-2x"></i></h1>
     <h1 class=" text-center ">CONTACTANOS</h1>
-    <div class="p-3" style="background-color: #3498DB">
-        <form class="col-md-8 col-md-offset-2">
+    <div>
+        <form class="col-md-8 col-md-offset-2" style="background-color: #3498DB">
             <div class="form-group text-light">
                 <label for="exampleInputEmail1 text-light" id="text2">Nombre </label>
                 <input type="text" class="form-control" placeholder="Nombre  ">
